# OC_Atarashii

./: LICENSE  pyproject.toml
dataset_generation/: Test.ipynb  generate_dataset.py  generate_dataset_vision.py
scripts/: ReverseEngineeringHelper.py  alter_ram_while_playing.py  automated_analysis.py  find_correlation.py  find_correlation_in_input.py  find_linear_regression.py  find_mapping.py  find_paired_interactions.py  get_objects_patches.py  max_nb_objects.py  play.py  play_pygame.py  rem_gui.py  rem_gui_saves.py  render.py  run_agent.py  state_distribution.py  testBerzerk.py  testSkriptNr2.py  testSkriptNr3.py  testSkriptNr5.py  testSkriptNr6.py  testSkriptNr7.py  testSkriptNr8.py  testSkriptNr9.py  test_out_everything.py  test_out_everything_categorical.py  track_bit_activity.py  track_objects.py  vision_automation.py
scripts/agents/: requirements.txt  train.py
scripts/demo/: README Demos.md  demo_alien.py  demo_assault.py  demo_asterix.py  demo_asterix_ai.py  demo_asterix_revised.py  demo_asteroids.py  demo_atlantis.py  demo_battlezone.py  demo_beamrider.py  demo_berzerk.py  demo_bowling.py  demo_boxing.py  demo_breakout.py  demo_carnival.py  demo_centipede.py  demo_choppercommand.py  demo_crazyclimber.py  demo_demon_attack.py  demo_freeway.py  demo_kangaroo.py  demo_montezuma_revenge.py  demo_mspacman.py  demo_namethisgame.py  demo_pong.py  demo_privateeye.py  demo_qbert.py  demo_riverRaid.py  demo_seaquest.py  demo_skiing.py  demo_skiing2.py  demo_space_invaders.py  demo_space_invaders_quentin.py  demo_tennis.py  (+6 more)
tests/: test_no_debugging_statements.py
(+62 files in other folders)
