[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocatarashii"
version = "2.2.2"
description = "Extended Object Centric Atari 2600"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale_py>=0.11.1",
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.3",
    "opencv_python>=4.12.0.88",
    "scikit_image>=0.25.2",
    "termcolor>=3.1.0",
    "seaborn>=0.13.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "keyboard>=0.13.5",
    "tqdm>=4.67.1",
    "pygame>=2.6.1",
    "pyfiglet>=1.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
